# DREAM

./: .gitignore  CMakeLists.txt  INSTALLATION.md  KNOWN_ISSUES.md  README.md  matlab.cmake  octave.cmake  python.cmake
examples/: cylind_f_arr_example.m  dreamcirc_example.jl  dreamcirc_example.py  model_based_example.m  rect_arr_example.m  rect_example.m  saft_example.m  test_all.m
extra_src/: Makefile_matlab  Makefile_octave  affinity.c  arr_functions.c  arr_functions.cc  circ_sir.c  circ_sir.cc  conv.c  conv.cc  das.c  das.cc  das_arr.c  das_arr.cc  dream_error.c  dream_error.cc  fftconv.cc  fftconv_p.cc  mex_circ_sir.cc  mex_conv_p.cc  mex_copy_p.cc  mex_das.c  mex_das.cc  mex_das_arr.c  mex_das_arr.cc  mex_das_uni.cc  mex_fftconv_ola.cc  mex_fftconv_p.cc  mex_fftconv_p_msvc.cc  mex_rect_sir.cc  mex_saft.cc  mex_scirc_sir.cc  mex_sum_fftconv.cc  mex_sum_fftconv_p_msvc.cc  oct_add_p.cc  oct_circ_sir.cc  oct_conv_p.cc  oct_copy_p.cc  oct_das.cc  oct_das_arr.cc  oct_das_uni.cc  (+10 more)
include/: affinity.h  arg_parser.h  arg_parser_julia.h  arg_parser_python.h  arr_functions.h  att.h  attenuation.h  circ_sir.h  conv.h  das.h  das_arr.h  das_uni.h  dream.h  dream_arr_annu.h  dream_arr_circ.h  dream_arr_cylind.h  dream_arr_cylind_d.h  dream_arr_cylind_f.h  dream_arr_rect.h  dream_error.h  dreamcirc.h  dreamcirc_f.h  dreamcylind.h  dreamcylind_d.h  dreamcylind_f.h  dreamline.h  dreamrect.h  dreamrect_f.h  dreamsphere.h  dreamsphere_d.h  dreamsphere_f.h  fft.h  fft_matlab_no_fftw.h  fftconv.h  fftconv_p.h  msvc_rint.h  rect_sir.h  scirc_sir.h
julia/: CMakeLists.txt
julia/include/: jl_das.hpp
julia/src/: jl_conv_p.cc  jl_das.cc  jl_dream_arr_annu.cc  jl_dream_arr_circ.cc  jl_dream_arr_cylind.cc  jl_dream_arr_rect.cc  jl_dreamcirc.cc  jl_dreamcirc_f.cc  jl_dreamcylind.cc  jl_dreamline.cc  jl_dreamrect.cc  jl_dreamrect_f.cc  jl_dreamsphere.cc  jl_fftconv_p.cc
julia/tests/: CMakeLists.txt  bench_dreamrect.jl  test_conv.jl  test_das.jl  test_das_rca.jl  test_das_saft.jl  test_das_tfm.jl  test_dream_arr_annu.jl  test_dream_arr_circ.jl  test_dream_arr_cylind.jl  test_dream_arr_rect.jl  test_dreamcirc.jl  test_dreamcirc_f.jl  test_dreamcylind.jl  test_dreamline.jl  test_dreamrect.jl  test_dreamrect_f.jl  test_dreamsphere.jl
m_files/: arr_focus_delays.m  h2o_soundspeed.m  plot_array.m
mex/: CMakeLists.txt  mex_dream_apodwin.c  mex_dream_apodwin.cc  mex_dream_arr_annu.c  mex_dream_arr_annu.cc  mex_dream_arr_circ.c  mex_dream_arr_circ.cc  mex_dream_arr_cylind.cc  mex_dream_arr_cylind_d.c  mex_dream_arr_cylind_d.cc  mex_dream_arr_cylind_f.c  mex_dream_arr_cylind_f.cc  mex_dream_arr_rect.c  mex_dream_arr_rect.cc  mex_dream_att.c  mex_dream_att.cc  mex_dreamcirc.c  mex_dreamcirc.cc  mex_dreamcirc_f.c  mex_dreamcirc_f.cc  mex_dreamcylind.cc  mex_dreamcylind_d.c  mex_dreamcylind_d.cc  mex_dreamcylind_f.c  mex_dreamcylind_f.cc  mex_dreamline.c  mex_dreamline.cc  mex_dreamrect.c  mex_dreamrect.cc  mex_dreamrect_f.c  mex_dreamrect_f.cc  mex_dreamsphere.cc  mex_dreamsphere_d.c  mex_dreamsphere_d.cc  mex_dreamsphere_f.c  mex_dreamsphere_f.cc  mex_fft.c
oct/: CMakeLists.txt  Makefile  oct_dream_apodwin.cc  oct_dream_arr_annu.cc  oct_dream_arr_circ.cc  oct_dream_arr_cylind.cc  oct_dream_arr_cylind_d.cc  oct_dream_arr_cylind_f.cc  oct_dream_arr_rect.cc  oct_dream_att.cc  oct_dreamcirc.cc  oct_dreamcirc_f.cc  oct_dreamcylind.cc  oct_dreamcylind_d.cc  oct_dreamcylind_f.cc  oct_dreamline.cc  oct_dreamrect.cc  oct_dreamrect_f.cc  oct_dreamsphere.cc  oct_dreamsphere_d.cc  oct_dreamsphere_f.cc
opencl/: cl_das.cc  cl_das_uni.cc  cl_dreamcirc.cc  cl_dreamrect.cc  cl_dreamrect.cc~  cl_rect_sir.cc  das.cl  das_double.cl  das_float.cl  das_uni_double.cl  das_uni_float.cl  dreamcirc.cl  dreamrect.cl  dreamrect.cl~  rect_sir.cl
python/: CMakeLists.txt
python/include/: py_das.hpp  py_fftconv_p.hpp
python/src/: py_das.cc  py_dream_arr_annu.cc  py_dream_arr_circ.cc  py_dream_arr_cylind.cc  py_dream_arr_rect.cc  py_dreamcirc.cc  py_dreamcirc_f.cc  py_dreamcylind.cc  py_dreamline.cc  py_dreamrect.cc  py_dreamrect_f.cc  py_dreamsphere.cc  py_fftconv_p.cc
python/tests/: CMakeLists.txt  bench_das_rca.py  bench_dreamrect.py  test_conv.py  test_das_rca.py  test_das_saft.py  test_das_tfm.py  test_dream_arr_annu.py  test_dream_arr_circ.py  test_dream_arr_cylind.py  test_dream_arr_rect.py  test_dreamcirc.py  test_dreamcirc_f.py  test_dreamcylind.py  test_dreamline.py  test_dreamrec.py  test_dreamrect.py  test_dreamrect_f.py  test_dreamsphere.py
src/: Makefile_matlab  affinity.c  affinity.cc  affinity.cc~  affinity.c~  arr_functions.c  arr_functions.cc  arr_functions.c~  att.cc  attenuation.cc  dream_arr_annu.c  dream_arr_annu.cc  dream_arr_annu.c~  dream_arr_circ.c  dream_arr_circ.cc  dream_arr_circ.c~  dream_arr_cylind.cc  dream_arr_cylind_d.c  dream_arr_cylind_d.cc  dream_arr_cylind_d.c~  dream_arr_cylind_f.c  dream_arr_cylind_f.cc  dream_arr_cylind_f.c~  dream_arr_rect.c  dream_arr_rect.cc  dream_arr_rect.c~  dream_error.c  dream_error.cc  dream_error.c~  dreamcirc.c  dreamcirc.cc  dreamcirc.c~  dreamcirc_f.c  dreamcirc_f.cc  dreamcirc_f.c~  dreamcylind.cc  dreamcylind_d.c  dreamcylind_d.cc  dreamcylind_d.c~  dreamcylind_f.c  (+23 more)
tests/: CMakeLists.txt  setup_dream_parameters.m  test_conv.m  test_dream_arr_circ.m  test_dream_arr_cylind.m  test_dream_arr_rect.m  test_dreamcirc.m  test_dreamcirc_f.m  test_dreamcylind.m  test_dreamline.m  test_dreamrect.m  test_dreamsphere.m
tests/m_files/: bench_das_rca.m  bench_das_tfm.m  bench_dreamrect.m  plot_das_fmc_delays.m  setup_dream_parameters.m  test_conv.m  test_das_rca.m  test_das_saft.m  test_das_tfm.m  test_das_uni_rca.m  test_das_uni_saft.m  test_das_uni_tfm.m  test_dream_arr_annu.m  test_dream_arr_circ.m  test_dream_arr_cylind.m  test_dream_arr_rect.m  test_dreamcirc.m  test_dreamcirc_f.m  test_dreamcylind.m  test_dreamline.m  test_dreamrect.m  test_dreamrect_f.m  test_dreamsphere.m  test_opencl.m
tests/src/: test_fftconv_p.cc
userman/: Makefile  UseLATEX.cmake  dream_userman.bib  dream_userman.bib.tmp  dream_userman.bib~  dream_userman.tex  dream_userman.tex~  (+4 more)
(+112 files in other folders)
